# plane-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
plane_cli/: __init__.py  client.py  config.py  main.py  output.py
plane_cli/commands/: __init__.py  config_cmd.py  issues.py  labels.py  pages.py  projects.py  states.py
